# yew-taury-cart

./: .gitignore  Cargo.toml
desktop/: Cargo.toml  products.json  tauri.conf.json
desktop/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs  tauri.rs
frontend/src/components/: cart.rs  mod.rs  product.rs  product_list.rs
product/: Cargo.toml
product/src/: lib.rs
tauri-cart/: Cargo.toml  tauri.conf.json
tauri-cart/src/: main.rs
tauri_cart/: tauri.conf.json
tauri_cart/src/: main.rs
yew-cart/: Cargo.toml
yew-cart/src/: main.rs  tauri.rs
yew_cart/: Cargo.toml  index.html
yew_cart/src/: tauri.rs
