[package]
name = "yew_cart"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3"
web-sys = "0.3"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
gloo-utils = "0.1.6"
product = { path = "../product", version = "0.1.0"}
gloo-console = "0.2.3"
